Change manifest description

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "SillyCompany",
     "version_number": "1.0.0",
     "website_url": "https://github.com/adriankiezik/silly-company",
-    "description": "Mod for Lethal Company",
+    "description": "Adds silly posters to your ship",
     "dependencies": [
         "BepInEx-BepInExPack-5.4.2100"
     ]
